User management added like block and unblock users
